--- a/.azure/namespace-rbac-scope-regression-pipeline.yaml
+++ b/.azure/namespace-rbac-scope-regression-pipeline.yaml
@@ -15,6 +15,7 @@ jobs:
       display_name: 'regression-bundle I. - kafka'
       test_case: 'kafka/**/*ST,!kafka/dynamicconfiguration/**/*ST'
       groups: 'regression'
+      excludedGroups: 'nodeport'
       cluster_operator_install_type: 'bundle'
       timeout: 360
       strimzi_rbac_scope: NAMESPACE
@@ -25,6 +26,7 @@ jobs:
       display_name: 'regression-bundle II. - security'
       test_case: 'security/**/*ST'
       groups: 'regression'
+      excludedGroups: 'nodeport'
       cluster_operator_install_type: 'bundle'
       timeout: 360
       strimzi_rbac_scope: NAMESPACE
@@ -35,6 +37,7 @@ jobs:
       display_name: 'regression-bundle III. - connect + tracing + watcher'
       test_case: 'connect/**/*ST,tracing/**/*ST,watcher/**/*ST'
       groups: 'regression'
+      excludedGroups: 'nodeport'
       cluster_operator_install_type: 'bundle'
       timeout: 360
       strimzi_rbac_scope: NAMESPACE
@@ -45,6 +48,7 @@ jobs:
       display_name: 'regression-bundle IV. - operators'
       test_case: 'operators/**/*ST'
       groups: 'regression'
+      excludedGroups: 'nodeport'
       cluster_operator_install_type: 'bundle'
       timeout: 360
       strimzi_rbac_scope: NAMESPACE
@@ -55,6 +59,7 @@ jobs:
       display_name: 'regression-bundle V. - rollingupdate'
       test_case: 'rollingupdate/**/*ST'
       groups: 'regression'
+      excludedGroups: 'nodeport'
       cluster_operator_install_type: 'bundle'
       timeout: 360
       strimzi_rbac_scope: NAMESPACE
@@ -65,6 +70,7 @@ jobs:
       display_name: 'regression-bundle VI. - mirrormaker + dynamicconfiguration'
       test_case: 'mirrormaker/**/*ST,kafka/dynamicconfiguration/**/*ST'
       groups: 'regression'
+      excludedGroups: 'nodeport'
       cluster_operator_install_type: 'bundle'
       timeout: 360
       strimzi_rbac_scope: NAMESPACE
@@ -76,6 +82,7 @@ jobs:
       # !LoggingChangeST is skipped because it can be flaky on Azure
       test_case: '!kafka/**/*ST,!mirrormaker/**/*ST,!connect/**/*ST,!security/**/*ST,!LoggingChangeST,!operators/**/*ST,!rollingupdate/**/*ST,!watcher/**/*ST,!tracing/**/*ST'
       groups: 'regression'
+      excludedGroups: 'nodeport'
       cluster_operator_install_type: 'bundle'
       timeout: 360
       strimzi_rbac_scope: NAMESPACE
