KafkaConnect add jmxOptions

--- a/api/src/test/resources/io/strimzi/api/kafka/model/040-Crd-kafka-crdApi-v1beta1.yaml
+++ b/api/src/test/resources/io/strimzi/api/kafka/model/040-Crd-kafka-crdApi-v1beta1.yaml
@@ -864,7 +864,7 @@ spec:
                         required:
                         - type
                         description: Authentication configuration for connecting to
-                          the Kafka JMX port.
+                          the JMX port.
                     description: JMX Options for Kafka brokers.
                   resources:
                     type: object
@@ -7720,7 +7720,7 @@ spec:
                         required:
                         - type
                         description: Authentication configuration for connecting to
-                          the Kafka JMX port.
+                          the JMX port.
                     description: JMX Options for Kafka brokers.
                   resources:
                     type: object
@@ -15590,7 +15590,7 @@ spec:
                         required:
                         - type
                         description: Authentication configuration for connecting to
-                          the Kafka JMX port.
+                          the JMX port.
                     description: JMX Options for Kafka brokers.
                   resources:
                     type: object
